# rndcmp_stochastic_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  experiment1.cpp  experiment2.cpp  experiment3.cpp  experiment4.cpp  integrator_example.cpp  main.cpp  main1.cpp
.github/workflows/: cmake.yml
examples/: example.cpp  integrator_example.cpp
experiments/: experiment1.cpp  experiment2.cpp  experiment3.cpp  experiment4.cpp  experiment5.cpp
include/: bfloat16.hpp  bfloat16sr.hpp  esn.hpp  fixed.hpp  fixed_point.hpp  fixedsr.hpp  floatsr.hpp  half.hpp  halfsr.hpp  integrator.hpp  types.hpp
src/: fixed_point.cpp  main.cpp
tests/: test_bfloat.cpp  test_fixedsr.cpp  test_floatsr.cpp  test_half.cpp
